Fixed Viewport cutoff

--- a/src/react/styles/index.css
+++ b/src/react/styles/index.css
@@ -4,12 +4,18 @@ body, html, #root {
   height: 100%;
   width: 100%;
   overflow: hidden;
+
 }
 
 
 .panel-viewport {
   height: 100vh;
   width: 100vw;
+}
+
+.panel-viewport, #horizontal-panel-container, #vertical-panel-container, #zoom-container, #flashcard-container {
+  max-height: calc(100vh - 100px);
+  overflow: auto;
 }
 
 #reader-display-panel, #text-input-panel {
@@ -20,6 +26,9 @@ body, html, #root {
   overflow: auto;
   box-sizing: border-box;
   text-align: left;
+  position: absolute;
+  bottom: 0; /* Align to the bottom */
+  right: 0;
 }
 
 #horizontal-panel-container {
